# new-aws

./: .gitignore  CLAUDE.md  README.md  SKYVERN_DECISION.md  aws_account_creator.py  aws_creator.py  email_service.py  justfile  main.py  pyproject.toml  sample_account_details.json  sample_config.json  test_basic.py  test_e2e_integration.py  test_email_integration.py  test_production_dry_run.py
.github/workflows/: ci.yml
claude_spikes/: aws_test_results_20250621_133234.json  aws_test_results_20250621_133636.json  justfile  requirements_experiments.txt  test_browser_comparison.py  test_requests_aws.py  test_selenium_aws.py  test_working_approaches.py
claude_spikes/archive/: test_playwright_aws.py  test_skyvern_aws_approaches.py  test_skyvern_basic.py
claude_spikes/screenshots_dumps/: aws_page_raw.html  aws_page_with_session.html
